<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.johnbeedles.lv.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/HeaderStyle"
        android:padding="20dp"
        android:text="@string/welcome_text"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SubHeaderStyle"
        android:layout_marginBottom="10dp"
        android:paddingLeft="16dp"
        android:text="@string/welcome_subtext"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="75dp"
            android:scaleType="center"
            android:src="@drawable/lv_heart" />

        <LinearLayout
            android:id="@+id/carInsurance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/car_insurance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SubHeaderStyle"
                android:text="@string/car_insurance"/>

            <TextView
                android:id="@+id/car_policy_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/PolicyNumberStyle"
                android:text="@string/car_policy_number"/>

            <TextView
                android:id="@+id/car_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/GeneralTextStyle"
                android:text="@string/car_details"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/lv_primary"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="75dp"
            android:scaleType="center"
            android:src="@drawable/lv_heart" />


        <LinearLayout
            android:id="@+id/homeInsurance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/home_insurance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SubHeaderStyle"
                android:text="@string/home_insurance"/>

            <TextView
                android:id="@+id/home_policy_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/PolicyNumberStyle"
                android:text="@string/home_policy_number"/>

            <TextView
                android:id="@+id/home_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/GeneralTextStyle"
                android:text="@string/home_address"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/lv_primary"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="75dp"
            android:scaleType="center"
            android:src="@drawable/lv_heart" />

        <LinearLayout
            android:id="@+id/petInsurance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pet_insurance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SubHeaderStyle"
                android:text="@string/pet_insurance"/>

            <TextView
                android:id="@+id/pet_policy_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/PolicyNumberStyle"
                android:text="@string/pet_policy_number"/>

            <TextView
                android:id="@+id/pet_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/GeneralTextStyle"
                android:text="@string/pet_name"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/lv_primary"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="75dp"
            android:scaleType="center"
            android:src="@drawable/lv_heart" />

        <LinearLayout
            android:id="@+id/members_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/member_offers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/SubHeaderStyle"
                android:text="@string/member_offers"/>

            <TextView
                android:id="@+id/members_subheader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/GeneralTextStyle"
                android:text="@string/members_subheader"/>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/lv_primary"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp" />

</LinearLayout>
